--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Update app</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <meta 
+      http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://s3.timeweb.cloud/*; connect-src 'self' %VITE_API_URL%" 
+    />
   </head>
 
   <body>
