--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <title>Update app</title>
     <meta 
       http-equiv="Content-Security-Policy" 
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://s3.timeweb.cloud/*; connect-src 'self' %VITE_API_URL%" 
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://s3.timeweb.cloud; connect-src 'self' %VITE_API_URL%" 
     />
   </head>
 
